--- a/style.css
+++ b/style.css
@@ -231,7 +231,8 @@
   }
   @media(max-width:500px){
     .console-container {
-        display: none;
+      font-size: 25px;
+      margin-left: -200px;
       }
   }
   
@@ -612,6 +613,7 @@
     width: 300px;
     height: 360px;
     border-radius: 5px;
+    border: 1px solid rgb(211, 207, 207);
     margin-right: 40px;
     -moz-box-shadow: 0 0 3px rgb(175, 174, 174);
 -webkit-box-shadow: 0 0 3px rgb(175, 174, 174);
