--- a/style.css
+++ b/style.css
@@ -217,7 +217,7 @@
   }
   .console-container {
    
-    font-family:"Khula";
+    font-family: "Dancing Script";
     font-size:4em;
     text-align:center;
     height:200px;
@@ -225,7 +225,8 @@
     display:block;
     position:absolute;
     color:white;
-    top:-180px;
+    text-shadow: 2px 1px 5px rgb(0, 238, 255);
+    top:-10px;
     bottom:0;
     left:0;
     right:0;
@@ -253,13 +254,43 @@
   }
   @media(max-width:500px){
     .console-container {
-      font-size: 25px;
-      margin-left: -200px;
+      display: none;
       }
   }
+@media(min-width:500px){
+  .section{
+    display: none;
+    }
+}
+.section{
+  text-align: center;
+}
+.section h1 {
+  margin: 30px 0 20px 0;
+  font-size: 55px;
+  font-weight: 700;
+  text-shadow: 2px 1px 5px black;
+  text-transform: uppercase;
+}
+
+.change_content:after {
+  content: "";
+  animation: changetext 5s infinite linear;
+  color: #00b894;
+}
+
+@keyframes changetext {
+  0% {
+    content: "Training";
+  }
+  50% {
+    content: "Placement";
+  }
+  100% {
+    content: "Internship";
+  }
   
-
-
+}
 
 
   .container h1{
