--- a/style.css
+++ b/style.css
@@ -665,8 +665,9 @@
   .product-card {
     flex: 0 0 auto;
     width: 300px;
+    background-color: rgba(243, 248, 225, 0.801);
     height: 360px;
-    border-radius: 5px;
+    border-radius: 20px;
     border: 1px solid rgb(211, 207, 207);
     margin-right: 40px;
     -moz-box-shadow: 0 0 3px rgb(175, 174, 174);
@@ -678,7 +679,7 @@ box-shadow: 0 0 3px rgb(175, 174, 174);
     position: relative;
     width: 100%;
     height: 250px;
-    border-radius: 5px;
+    border-radius: 20px;
     overflow: hidden;
   }
   
@@ -747,7 +748,7 @@ box-shadow: 0 0 3px rgb(175, 174, 174);
   .product-brand {
     font-family:' poppins';
     font-size: 25px;
-    color: #ea3c14;
+    color: #000;
   }
   
   .product-short-description {
@@ -758,19 +759,19 @@ box-shadow: 0 0 3px rgb(175, 174, 174);
     opacity: 0.7;
     text-transform: capitalize;
     margin: 5px 0;
-    color: #F99324;
+    color: #000;
   }
   
   .price {
     font-weight: 500;
     font-size: 20px;
-    color: #8CC63E;
+    color: #000;
   }
   
   .actual-price {
     margin-left: 20px;
     opacity: 0.8;
-    color: #8CC63E;
+    color: #000;
     text-decoration: line-through;
   }
   
@@ -842,7 +843,7 @@ box-shadow: 0 0 3px rgb(175, 174, 174);
   }
   
   footer{
-    background: #f1f1f0;
+    background: rgb(226, 239, 243);
     width: 100%;
     bottom: 0;
     left: 0;
@@ -994,7 +995,7 @@ box-shadow: 0 0 3px rgb(175, 174, 174);
   }
   footer .bottom-details{
     width: 100%;
-    background: #f1f1f0;
+    background: rgb(226, 239, 243);
   }
   footer .bottom-details .bottom_text{
     max-width: 1250px;
@@ -1159,4 +1160,10 @@ body.dark {
 
 .fa-sun {
 	color: #f39c12;
+}
+
+.bottom-details .copyright_text a{
+  color: #0a4d3f;
+  font-weight: 600;
+  font-size: 17px;
 }
