--- a/style.css
+++ b/style.css
@@ -1068,6 +1068,11 @@ box-shadow: 0 0 3px rgb(175, 174, 174);
       width: 100%;
     }
   }
+  @media (max-width: 420px){
+    .content .link-boxes{
+      margin-left: -20px;
+    }
+  }
   
 
 
