--- a/style.css
+++ b/style.css
@@ -37,6 +37,9 @@
     background-color: #38b6ff;
 }
 .nav-item a{
+  height: 40px;
+}
+.nav-item a{
     color: #fff;
 }
 .nav-item a:hover{
@@ -78,6 +81,8 @@
         margin-left: 20px;
     }
 }
+
+
 .home{
   position: relative;
   width: 100%;
@@ -92,6 +97,172 @@
     min-height: 370px;
   }
 }
+
+/*slider*/
+.img-slider{
+  position: relative;
+  width: 100%;
+  height: 372px;
+}
+
+.img-slider .slide{
+  z-index: 1;
+  position: absolute;
+  width: 100%;
+  clip-path: circle(0% at 0 50%);
+}
+
+.img-slider .slide.active{
+  clip-path: circle(150% at 0 50%);
+  transition: 2s;
+  transition-property: clip-path;
+}
+
+.img-slider .slide img{
+  z-index: 1;
+  width: 100%;
+  height: 370px;
+}
+
+.img-slider .slide .info{
+  position: absolute;
+  top: 0;
+  padding: 15px 30px;
+}
+
+.img-slider .slide .info h2{
+  color: #fff;
+  font-size: 45px;
+  text-transform: uppercase;
+  font-weight: 800;
+  letter-spacing: 2px;
+}
+
+.img-slider .slide .info p{
+  color: rgba(255, 255, 255, 0.979);
+  background: rgba(10, 8, 8, 0.1);
+  font-size: 16px;
+  width: 60%;
+  padding: 10px;
+  border-radius: 4px;
+}
+
+.img-slider .navigation{
+  z-index: 2;
+  position: absolute;
+  display: flex;
+  bottom: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.img-slider .navigation .btn{
+  background: rgba(255, 255, 255, 0.5);
+  width: 10px;
+  height: 10px;
+  margin: 10px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+
+
+@media (max-width: 820px){
+  .img-slider{
+    width: 100%;
+    height: 270px;
+    margin-bottom: 130px;
+  }
+
+  .img-slider .slide .info{
+    padding: 10px 25px;
+  }
+
+  .img-slider .slide .info h2{
+    font-size: 35px;
+  }
+
+  .img-slider .slide .info p{
+    width: 70%;
+    font-size: 15px;
+  }
+
+  .img-slider .navigation{
+    bottom: -55px;
+  }
+
+  .img-slider .navigation .btn{
+    width: 10px;
+    height: 10px;
+    margin: 8px;
+  }
+}
+
+@media (max-width: 620px){
+  .img-slider{
+    width: 100%;
+    height: 240px;
+    margin-bottom: 60px;
+  }
+  .img-slider img{
+    height: 250px!important;
+  }
+
+  .img-slider .slide .info{
+    padding: 10px 20px;
+  }
+
+  .img-slider .slide .info h2{
+    font-size: 30px;
+  }
+
+  .img-slider .slide .info p{
+    width: 50%;
+    font-size: 15px;
+  }
+
+  .img-slider .navigation{
+    bottom: 15px;
+  }
+
+  .img-slider .navigation .btn{
+    width: 8px;
+    height: 8px;
+    margin: 6px;
+  }
+}
+
+@media (max-width: 420px){
+  .img-slider{
+    width: 100%;
+    height: 240px;
+    margin-bottom: 60px;
+  }
+  .img-slider img{
+    height: 250px!important;
+  }
+
+  .img-slider .slide .info{
+    padding: 5px 10px;
+  }
+
+  .img-slider .slide .info h2{
+    font-size: 25px;
+  }
+
+  .img-slider .slide .info p{
+    width: 50%;
+    font-size: 12px;
+  }
+
+  .img-slider .navigation{
+    bottom: 10px;
+  }
+}
+
+
+
+
 .home:before{
   z-index: 777;
   content: '';
@@ -215,82 +386,7 @@
 .hidden {
     opacity:0;
   }
-  .console-container {
-   
-    font-family: "Dancing Script";
-    font-size:4em;
-    text-align:center;
-    height:200px;
-    width:600px;
-    display:block;
-    position:absolute;
-    color:white;
-    text-shadow: 2px 1px 5px rgb(0, 238, 255);
-    top:-10px;
-    bottom:0;
-    left:0;
-    right:0;
-    margin:auto;
-  }
-  .console-underscore {
-     display:inline-block;
-    position:relative;
-    top:-0.14em;
-    left:10px;
-  }
-  @media(max-width:1100px){
-    .console-container {
-        font-size:50px;
-        text-align: center;
-        top: -30px;
-      }
-  }
-  @media(max-width:660px){
-    .console-container {
-        font-size:50px;
-        margin-left: -100px;
-        top: -50px;
-      }
-  }
-  @media(max-width:500px){
-    .console-container {
-      display: none;
-      }
-  }
-@media(min-width:500px){
-  .section{
-    display: none;
-    }
-}
-.section{
-  text-align: center;
-}
-.section h1 {
-  margin: 30px 0 20px 0;
-  font-size: 55px;
-  font-weight: 700;
-  text-shadow: 2px 1px 5px black;
-  text-transform: uppercase;
-}
 
-.change_content:after {
-  content: "";
-  animation: changetext 5s infinite linear;
-  color: #00b894;
-}
-
-@keyframes changetext {
-  0% {
-    content: "Training";
-  }
-  50% {
-    content: "Placement";
-  }
-  100% {
-    content: "Internship";
-  }
-  
-}
 
 
   .container h1{
@@ -299,13 +395,13 @@
     font-size: 60px;
     font-size-adjust: 0.58;
     font-weight: 700;
-    color: #8CC63E;
+    color: black;
   }
   .container h3{
     margin: 0 0 5% 0;
     text-align: center;
     font-size-adjust: 0.58;
-    font-size: 100px;
+    font-size: 60px;
     font-weight: 700;
     color: #ea3c14;
   }
@@ -552,9 +648,22 @@
       .main-timeline .timeline:after{ border-radius: 88px 0 0 88px; }
       .main-timeline .timeline:nth-child(even):after{ border-radius: 0 88px 88px 0; }
   }
+  @media screen and (max-width:820px){
+    .container h1{
+      margin: 18% 0 2% 0;
+    }
+  }
+  @media screen and (max-width:767px){
+    .container h1{
+      margin: 23% 0 2% 0;
+    }
+  }
   @media screen and (max-width:767px){
     .container h3{
-        font-size: 80px;
+        font-size: 60px;
+      }
+      .container h1{
+        font-size: 40px;
       }
     .main-timeline .timeline-icon{
         font-size: 50px;
@@ -598,8 +707,9 @@
   }
   @media screen and (max-width:479px){
     .container h3{
-        font-size: 70px;
+        font-size: 60px;
       }
+      
       .main-timeline .timeline-icon{
           font-size: 50px;
           transform:translateY(0);
@@ -627,223 +737,105 @@
 
 
   .demand h2{
-    text-align: center;
-    margin: 5% 0 2%;
-    font-size: 33px;
-    font-weight: 700;
-    color:#ea3c14;
-  }
-
-
-
-  /* PRODUCTS */
-.product {
-    position: relative;
-    overflow: hidden;
-    padding: 20px;
-  }
-  
-  .product-category {
-    padding: 0 10vw;
-    font-size: 30px;
+    
+    margin: 5% 0 0 10%;
+    font-size: 23px;
     font-weight: 500;
-    margin-bottom: 40px;
-    text-transform: capitalize;
+    
   }
-  
-  .product-container {
-    padding: 0 10vw;
-    display: flex;
-    overflow-x: auto;
-    scroll-behavior: smooth;
+
+
+
+  /* Swippper */
+  .mySwiper{
+    height: 350px;
+    width: 80%;
   }
-  
-  .product-container::-webkit-scrollbar {
-    display: none;
+  .swiper-wrapper{
+    align-items: center;
   }
-  
-  .product-card {
-    flex: 0 0 auto;
-    width: 300px;
-    background-color: rgba(243, 248, 225, 0.801);
-    height: 360px;
-    border-radius: 20px;
-    border: 1px solid rgb(211, 207, 207);
-    margin-right: 40px;
-    -moz-box-shadow: 0 0 3px rgb(175, 174, 174);
--webkit-box-shadow: 0 0 3px rgb(175, 174, 174);
-box-shadow: 0 0 3px rgb(175, 174, 174);
-  }
-  
-  .product-image {
-    position: relative;
-    width: 100%;
+  .swiper-slide{
+    width: 250px;
     height: 250px;
-    border-radius: 20px;
-    overflow: hidden;
+    border-radius: 7px;
+    border: 1px solid #ccc;
+    -webkit-box-shadow: 0 0 5px 2px #ccc;
+    -moz-box-shadow: 0 0 5px 2px #ccc;
+    box-shadow: 0 0 5px 2px #ccc;
   }
-  
-  .product-thumb {
+  .swiper-slide img{
+    width: 220px;
+    height: 150px;
+    margin-left: 10%;
+  }
+  .swiper-slide-active{
+    transform: scale(1.2);
+    transition: .4s;
+  }
+  .swiper-button-next, .swiper-button-prev{
+    color: rgb(27, 149, 197);
+  }
+  .info1{
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    padding: 8px 0;
+    position: absolute;
+    /*bottom: 0;*/
+    text-align: justify;
+    border-radius: 0 0 5px 5px;
   }
-  
+  .info1 h3{
+    font-size: 15px;
+    text-align: center;
+    font-weight: 600;
+  }
+  .info1 p{
+    font-size: 12px;
+    text-align: center;
+    color: #000;
+  }
+  .info1 a{
+    text-decoration: none;
+    color: #0071BD;
+    float: right;
+    margin-right: 7px;
+    border: 1px solid #0071BD;
+    margin-top: -25px;
+    font-size: 12px;
+    padding: 2px 8px;
+  }
+  .info1 a:hover{
+    background: #0071BD;
+  color: #fff;
+  transition: 0.5s;
+  }
+  .info1 h6{
+    font-size: 10px;
+    font-weight: 300;
+    margin-left: 7px;
+  }
   .discount-tag {
     position: absolute;
-    background: #ea3c14;
-    padding: 5px;
+    background: #0071BD;
+    padding: 3px;
     color: #fff;
-    right: -30px;
-    top: 20px;
-    width: 150px;
+    right: 180px;
+    top: 8px;
+    height: 20px;
+    width: 68px;
+    font-size: 10px;
     text-align: center;
-    text-transform: capitalize;
-    transform: rotate(40deg);
+  }
+  .swiper-pagination{
+    bottom: 0!important;
   }
 
-  .seat-tag {
-    position: absolute;
-    background: #8CC63E;
-    padding: 2px;
-    color: #fff;
-    font-size: 12px;
-    top: 10px;
-    width: 100px;
-    text-align: center;
-    text-transform: capitalize;
-  }
-  
-  .card-btn {
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 10px;
-    width: 90%;
-    text-transform: capitalize;
-    border: none;
-    outline: none;
-    background: rgb(233, 232, 232);
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .product-card:hover .card-btn {
-    opacity: 1;
-  }
-  
-  .card-btn:hover {
-    background: #2696E9;
-    color: #fff;
-  }
-  
-  .product-info {
-    width: 100%;
-    height: 100px;
-    padding-top: 10px;
-    padding-left: 10px;
-  }
-  
-  .product-brand {
-    font-family:' poppins';
-    font-size: 25px;
-    color: #000;
-  }
-  
-  .product-short-description {
-    width: 100%;
-    height: 20px;
-    line-height: 20px;
-    overflow: hidden;
-    opacity: 0.7;
-    text-transform: capitalize;
-    margin: 5px 0;
-    color: #000;
-  }
-  
-  .price {
-    font-weight: 500;
-    font-size: 20px;
-    color: #000;
-  }
-  
-  .actual-price {
-    margin-left: 20px;
-    opacity: 0.8;
-    color: #000;
-    text-decoration: line-through;
-  }
-  
-  .pre-btn,
-  .nxt-btn {
-    border: none;
-    width: 10vw;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #fff 100%);
-    cursor: pointer;
-    z-index: 8;
-  }
-  
-  .pre-btn {
-    left: 0;
-    transform: rotate(180deg);
-  }
-  
-  .nxt-btn {
-    right: 0;
-  }
-  
-  .pre-btn img,
-  .nxt-btn img {
-    opacity: 0.2;
-  }
-  
-  .pre-btn:hover img,
-  .nxt-btn:hover img {
-    opacity: 1;
-  }
-  
-  .collection-container {
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 10px;
-  }
-  
-  .collection {
-    position: relative;
-  }
-  
-  .collection img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  .collection p {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    color: #fff;
-    font-size: 50px;
-    text-transform: capitalize;
-  }
-  
-  .collection:nth-child(3) {
-    grid-column: span 2;
-    margin-bottom: 10px;
-  }
-  
+
+
+
+
+
   footer{
-    background: rgb(226, 239, 243);
+    background: #e7f6ff;
     width: 100%;
     bottom: 0;
     left: 0;
@@ -1116,7 +1108,7 @@ box-shadow: 0 0 3px rgb(175, 174, 174);
 
 @media(max-width:990px){
   .darkmode{
-    margin: 15px 0px 0px 10px;
+    margin: 15px 0px 10px 10px;
   }
 }
 body.dark {
@@ -1319,3 +1311,8 @@ body.dark {
    margin-left: 0;
  }
 }
+
+
+
+
+
